Executing JUnit Test with Tags in Maven: docs, code